docs/versioned_docs/version-0.14.3/api/introduction.mdx
---
displayed_sidebar: api
---

import BrowserWindow from '@site/src/components/BrowserWindow';
import ThemedImage from '@theme/ThemedImage';

# Introduction

Supaglue supports three types of APIs:

1. **Unified API**: Write to and read from multiple third-party providers with a single API within a category for [`crm`](v2/crm/unified-crm-api), [`engagement`](v2/engagement/unified-engagement-api), and [`enrichment`](v2/enrichment/unified-enrichment-api).
1. [**Actions API**](v2/actions/actions-api): Write to provider-scoped APIs that range from CRUD to complex actions.
1. [**Passthrough**](v2/actions/send-passthrough-request): Call underlying native third-party provider APIs using credentials managed by Supaglue.

Use the [**Supaglue Management API**](v2/mgmt/management-api) to configure all aspects of your integrations.

## API authentication

Your requests to the Supaglue API must contain an API key. You can generate an API key in the Management Portal on the Configuration -> API Key page.

<BrowserWindow url="https://app.supaglue.io/applications/1dad4014-c295-422b-b384-1379396defd1/configuration/api_keys">

![configuration-api-key](/img/configuration-api-key.png)

</BrowserWindow>

:::info

You will only be able to view the API key upon generation. Store it in a safe place.

When you regenerate an API key, the previous key is invalidated.

:::

Pass in the API key in requests to the Supaglue API as a header:

```curl
curl http://api.supaglue.io/crm/v2/contacts \
   -H 'x-api-key: ...'
```
